--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <ul>
         <li>小游戏1</li>
     </ul>
+
+    <h1>代码</h1>
+    <ul>
+        <li><a href="code/python"></a> python 代码</li>
+    </ul>
 </body>
 </html>
