--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <h1>代码</h1>
     <ul>
-        <li><a href="code/python"></a> python 代码</li>
+        <li><a href="code/python/index.html">python 代码</a> </li>
     </ul>
 </body>
 </html>
