--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>小游戏</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>思维创造</title>
 </head>
-<body>
-    
-    <h1>小游戏集合</h1>
-    <ul>
-        <li>小游戏1</li>
-    </ul>
 
-    <h1>代码</h1>
-    <ul>
-        <li><a href="code/python/index.html">python 代码</a> </li>
-    </ul>
+<body>
+    <div class="container ">
+        <nav>
+            <div class="">思维</div>
+            <hr>
+        </nav>
+
+
+        <h1>小游戏集合</h1>
+        <ul>
+            <li>小游戏1</li>
+        </ul>
+
+        <h1>代码</h1>
+        <ul>
+            <li><a href="code/python/index.html">python 代码</a> </li>
+        </ul>
+    </div>
 </body>
+
 </html>
