--- a/index.html
+++ b/index.html
@@ -8,23 +8,44 @@
     <title>思维创造</title>
 </head>
 
-<body>
-    <div class="container ">
+<body class=" font-black">
+    <div class="container  mx-auto">
         <nav>
-            <div class="">思维</div>
+            <div class="p-4 font-bold">思维</div>
             <hr>
         </nav>
 
+        <div class="link p-4">
+            <ul class="p-4">
+                <li><a class="underline text-blue-700 hover:text-green-300" href="code/python/index.html">
+                        <date class="pr-4">2024/5/15:</date>python 代码
+                    </a> </li>
+                <li><a class="text-blue-700 " href="code/python/index.html">
+                        <date class="pr-4">2024/5/15:</date>python 代码
+                    </a> </li>
+            </ul>
 
-        <h1>小游戏集合</h1>
-        <ul>
-            <li>小游戏1</li>
-        </ul>
 
-        <h1>代码</h1>
-        <ul>
-            <li><a href="code/python/index.html">python 代码</a> </li>
-        </ul>
+        </div>
+
+        <nav>
+            <div class="p-4 font-bold">游戏</div>
+            <hr>
+        </nav>
+
+        <div class="link p-4">
+            <ul class="p-4">
+                <li><a class="underline text-blue-700 hover:text-green-300" href="piranha/index.html">
+                        水虎鱼
+                    </a> </li>
+                <li><a class="underline text-blue-700 " href="airplane-war/index.html">
+                        飞机大战
+                    </a> </li>
+            </ul>
+
+
+        </div>
+
     </div>
 </body>
 
