--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 <li><a class="underline text-blue-700 " href="airplane-war/index.html">
                         飞机大战
                     </a> </li>
+                <li><a class="underline text-blue-700 " href="airplane-war-ai/index.html">
+                        飞机大战-AI
+                    </a> </li>
             </ul>
 
 
